Added Clan Controller validation and routes
